Bug 1955433 - Increase vertical-spacer min-width and ensure not overflowable r=sidebar-reviewers,desktop-theme-reviewers,jsudiaman
Differential Revision: https://phabricator.services.mozilla.com/D246108

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -437,9 +437,11 @@ body {
   }
 }
 
-/* stylelint-disable-next-line media-query-no-invalid */
-@media not -moz-pref("sidebar.verticalTabs") {
-  #vertical-spacer {
+#vertical-spacer {
+  min-width: 20px;
+
+  /* stylelint-disable-next-line media-query-no-invalid */
+  @media not -moz-pref("sidebar.verticalTabs") {
     display: none;
   }
 }
